# FH-STECE2023

./: .gitignore  CMakeLists.txt  blink
exercises/: CMakeLists.txt
exercises/anael.wirtl-moelbach/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.h  push-button.cpp  push-button.h
exercises/anael.wirtl-moelbach/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/benedikt.polivka/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/benedikt.polivka/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/christopher.winter/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/christopher.winter/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/door-polymorphic/: CMakeLists.txt
exercises/door-polymorphic/anael.wirtl-moelbach/lib/: CMakeLists.txt  motor.cpp  push-button.h
exercises/door-polymorphic/anael.wirtl-moelbach/tests/: CMakeLists.txt
exercises/door-polymorphic/anto.dzidzic/lib/: CMakeLists.txt  door.cpp  door.h  motor-mock.cpp  motor-mock.h  motor.h
exercises/door-polymorphic/anto.dzidzic/tests/: CMakeLists.txt  door-tests.cpp  motor-polymorphic-tests.cpp  motor-tests.cpp
exercises/door-polymorphic/benedikt.polivka/lib/: CMakeLists.txt  light-barrier-mock.cpp  light-barrier-mock.h  light-barrier.cpp  motor-mock.cpp  motor-mock.h  motor.cpp  motor.h  push-button-mock.cpp  push-button-mock.h  push-button.cpp  push-button.h
exercises/door-polymorphic/benedikt.polivka/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp  pushbutton-tests.cpp
exercises/door-polymorphic/christopher.winter/lib/: CMakeLists.txt  door.h  light-barrier.cpp
exercises/door-polymorphic/christopher.winter/tests/: CMakeLists.txt
exercises/door-polymorphic/felix.feistritzer/lib/: CMakeLists.txt  light-barrier-mock.cpp  motor-mock.h  (+7 more)
exercises/door-polymorphic/kristian.seiner/: CMakeLists.txt
exercises/felix.feistritzer/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/felix.feistritzer/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/joerg.faschingbauer/lib/: motor.h  push-button.cpp  push-button.h
exercises/johannes.mlinar/lib/: door.cpp  door.h  light-barrier.h  motor.h  push-button.h
exercises/johannes.mlinar/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/kerstin.amrhein/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/kerstin.amrhein/tests/: door-tests.cpp  motor-tests.cpp
exercises/kristian.seiner/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/kristian.seiner/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/leo.traussnigg/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.h  push-button.cpp  push-button.h
exercises/leo.traussnigg/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/lorenz.kristl/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/lorenz.kristl/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/lucas.fink/lib/: door.cpp  door.h  light-barrier.h  motor.h  push-button.h
exercises/lucas.fink/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/lukas.supper/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/lukas.supper/tests/: door-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/majdedin.alrashid/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/majdedin.alrashid/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/marco.froihofer/lib/: door.cpp  door.h  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/marco.froihofer/tests/: door-tests.cpp  motor-tests.cpp
exercises/marcus.teichtmeister/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/marcus.teichtmeister/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/matthias.winkler/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/matthias.winkler/tests/: door-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/max.dandler/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/max.dandler/tests/: door-tests.cpp
exercises/maximilian.hofstaetter/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/maximilian.hofstaetter/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/paul.bichl/lib/: door.cpp  door.h  light-barrier.h  motor.h  push-button.cpp  push-button.h
exercises/paul.bichl/tests/: door-tests.cpp  lightbarrier-tests.cpp
exercises/paulina.hasenhuettl/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/paulina.hasenhuettl/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/viethung.doan/lib/: door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/viethung.doan/tests/: door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
(+140 files in other folders)
