add_subdirectory(door-polymorphic)

add_subdirectory(joerg.faschingbauer)

add_subdirectory(majdedin.alrashid)
add_subdirectory(kerstin.amrhein)
add_subdirectory(paul.bichl)
add_subdirectory(max.dandler)
add_subdirectory(viethung.doan)
add_subdirectory(anto.dzidzic)
add_subdirectory(felix.feistritzer)
add_subdirectory(lucas.fink)
add_subdirectory(marco.froihofer)
add_subdirectory(paulina.hasenhuettl)
add_subdirectory(maximilian.hofstaetter)
add_subdirectory(lorenz.kristl)
add_subdirectory(johannes.mlinar)
add_subdirectory(benedikt.polivka)
add_subdirectory(kristian.seiner)
add_subdirectory(melanie.sinnhofer)
add_subdirectory(lukas.supper)
add_subdirectory(marcus.teichtmeister)
add_subdirectory(roman.tragner)
add_subdirectory(leo.traussnigg)
add_subdirectory(michael.wettl)
add_subdirectory(matthias.winkler)
add_subdirectory(christopher.winter)
add_subdirectory(anael.wirtl-moelbach)
